feat: Improve card and hero component responsiveness
Refactors the Hero and card components (MenuItemCard, ProductCard) to be more responsive and visually appealing on various screen sizes. Adjusts typography, padding, and spacing to create a cleaner, more optimized user experience.

Also, passes the `onAddToCart` prop down to `Menu` and `Products` components within `Offerings` to enable cart functionality. The main page's smooth scrolling is now managed by JavaScript where needed, and the CSS has been adjusted accordingly.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Re'ward by Dr. Zaidul Akbar</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      /* For smooth scrolling */
-      html {
-        scroll-behavior: smooth;
-      }
+      /* Smooth scrolling is now handled by JS where needed */
       body {
         background-color: #f5f2e9;
       }
