feat: Implement product detail view
Introduce a modal for displaying detailed product information.
Update `MenuItemCard` and `ProductCard` to accept an `onCardClick` prop,
which triggers the display of product details.
Propagate this click handler to `Menu` and `Products` components.
Add state to `App.tsx` to manage the modal's visibility and the currently
selected product.
Include basic styling for scrollbar hiding in `index.html`.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,6 +17,14 @@
       }
       .animate-fade-in {
         animation: fade-in 0.3s ease-out forwards;
+      }
+      /* Hide scrollbar for elements with this class */
+      .hide-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+      .hide-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
       }
     </style>
      <script>
