--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Re'ward by Dr. Zaidul Akbar</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      /* Smooth scrolling is now handled by JS where needed */
+      html {
+        scroll-behavior: smooth;
+        scroll-padding-top: 180px; /* Offset for sticky headers/navs */
+      }
       body {
         background-color: #f5f2e9;
       }
