--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
       html {
         scroll-behavior: smooth;
-        scroll-padding-top: 180px; /* Offset for sticky headers/navs */
+        scroll-padding-top: 200px; /* Offset for sticky headers/navs */
       }
       body {
         background-color: #f5f2e9;
@@ -60,6 +60,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
